Sat Jul 28 22:30:55 2001  Christopher Faylor <cgf@cygnus.com>

	* dcrt0.cc (alloc_stack_hard_way): Make half-hearted attempt to deal
	with growing stack under Windows 95.

Fri Jul 27 12:36:07 2001  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Add install-lib and install-headers.

Fri Jul 27 12:28:12 2001  Christopher Faylor <cgf@cygnus.com>

	* cygwin.din: Export sys_errlist, sys_nerr.
	* include/cygwin/version.h: Bump minor version number.

Fri 27 Jul 2001 10:29:00  Corinna Vinschen <corinna@vinschen.de>

	* security.cc (get_user_primary_group): Fix compiler warning.
	(alloc_sd): Add DELETE permission for user when S_IWUSR is given.

Thu Jul 26 16:43:39 2001  Pieter de Visser <pieterdv@knoware.nl>

	* thread.cc (__pthread_equal): Invert return value so that true is
	returned when threads are equal.

Thu Jul 26 15:50:38 2001  Charles Wilson <cwilson@ece.gatech.edu>
			  Christopher Faylor <cgf@cygnus.com>

	* cygwin.din: Export __signgam.
	* include/cygwin/version.h: Bump minor version number.

Thu Jul 26 15:19:50 2001  Christopher Faylor <cgf@cygnus.com>

	Throughout, reorganize header file inclusion to put security.h prior to
	fhandler.h.
	* fhandler.h (fhandler_base::get_inheritance): New method.
	* fhandler_socket.cc (fhandler_socket::create_secret_event): Use proper
	close-on-exec inheritance when creating.
	(fhandler_socket::check_peer_secret_event): Create handle as
	non-inheritable.

2001-07-25  Kazuhiro Fujieda  <fujieda@jaist.ac.jp>

	* syscalls.cc (setsid): Detach process from its console if the current
	controlling tty is the console and already closed.
	* dtable.h (class dtable): Add members to count descriptors referring
	to the console.
	* dtable.cc (dtable::dec_console_fds): New function to detach process
	from its console.
	(dtable::release): Decrement the counter of console descriptors.
	(dtable::build_fhandler): Increment it.
	* exception.cc (ctrl_c_handler): Send SIGTERM to myself when catch
	CTRL_SHUTDOWN_EVENT.
